namespaces/live-1.cloud-platform.service.justice.gov.uk/umar-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: umar-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "transformed-department"
    cloud-platform.justice.gov.uk/application: "umar-dev"
    cloud-platform.justice.gov.uk/owner: "Umar Hansa: umar.hansa@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cloud-platform-reference-app"
